--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 </head>
 <body>
 
+<header class="header">
+  <div class="container header--container">
+
+    <a href="#" class="site-logo">
+      <img class="site-logo__img" src="img/logo.png" alt="logo--website" width="110" height="110">
+    </a>
+
+    <div class="location--wrapper">
+      <img  class="location--img" src="img/location.svg" alt="location-logo" width="40" height="40">
+        <p class="location--info">Москва, 1-ый Партийный пер., 1, стр. 57, к. 3.<br>Мытищи, Летная 40к1 домофон 1.</p>
+    </div>
+
+    <div class="call-wrapper">
+      <img src="img/call-logo.svg" alt="call-logo" width="40" height="40">
+      <p class="call--info">
+
+        <br>
+        <a href="#">Написать нам в What’s app</a>
+      </p>
+
+    </div>
+
+  </div>
+</header>
 
 
   <script src="js/main.js"></script>
